src/main/java/at/tewan/mcpc/language/mcfunction/MCFunction.bnf
{
    parserClass="at.tewan.mcpc.language.mcfunction.parser.MCFunctionParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="MCFunction"
    psiImplClassSuffix="Impl"
    psiPackage="at.tewan.mcpc.language.mcfunction.psi"
    psiImplPackage="at.tewan.mcpc.language.mcfunction.psi.impl"

    elementTypeHolderClass="at.tewan.mcpc.language.mcfunction.psi.MCFunctionTypes"
    elementTypeClass="at.tewan.mcpc.language.mcfunction.psi.MCFunctionElementType"
    tokenTypeClass="at.tewan.mcpc.language.mcfunction.psi.MCFunctionTokenType"

    psiImplUtilClass="at.tewan.mcpc.language.mcfunction.psi.impl.MCFunctionPsiImplUtil"

}

mcfunctionFile ::= (command|COMMENT|WHITE_SPACE)*


command ::= COMMAND_NAME (SPACE arg)* COMMAND_END
arg ::= LITERAL (RES_SEPARATOR RES_ID_NAME)? | target
target ::= TARGET_SELECTOR(TARGET_BODY_START SPACE* TARGET_ATTR_KEY SPACE* TARGET_ATTR_EQU SPACE* TARGET_BODY_END)?
